# ash-dal

./: .coveragerc  .gitignore  README.md  docker-compose.yaml  lets.yaml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: pull_request.yml  tests.yml  validate_code.yml
ash_dal/: __init__.py  constants.py  typing.py
ash_dal/dao/: __init__.py  async_dao.py  mixin.py  sync_dao.py
ash_dal/database/: __init__.py  async_database.py  sync_database.py  sync_session.py
ash_dal/exceptions/: __init__.py  database.py
ash_dal/utils/: __init__.py  ssl.py
ash_dal/utils/paginator/: __init__.py  async_paginator.py  base.py  factory.py  interface.py  paginator_page.py  sync_paginator.py
docker_files/: master.cnf  setup_db.sh  slave.cnf
tests/: constants.py  test_main.py
tests/dao/: infrastructure.py  test_async_dao.py  test_sync_dao.py
tests/database/: test_async_database.py  test_async_session.py  test_sync_database.py  test_sync_session.py
tests/test_data/: client-cert.pem  client-key.pem  server-ca.pem
tests/utils/: test_ssl.py
tests/utils/paginator/: infrastructure.py  test_async_paginator.py  test_sync_paginator.py
