[tool.poetry]
name = "ash-dal"
version = "0.1.2"
description = "The library provides a standardized way to connect to DB, and Base DAO class implementation"
authors = ["Dmitry Marchuk <dmarchuk@remedypointsolutions.com>"]
readme = "README.md"
packages = [{include = "ash_dal"}]

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^2.0.19"
pymysql = "^1.1.0"
aiomysql = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.320"
black = "^23.7.0"
ruff = "^0.0.278"
pytest = "^7.4.0"
safety = "^2.3.5"
pytest-cov = "^4.1.0"
ipython = "^8.14.0"
faker = "^19.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
src = ["src"]
extend-select = [
    "I",
    "F",
    "N",
    "UP",
]

[tool.pyright]
typeCheckingMode = "strict"
ignore = [
    "tests/*"
]

[tool.black]
line-length = 120
